--- a/src/python3_course_for_devs/notebooks/string.ipynb
+++ b/src/python3_course_for_devs/notebooks/string.ipynb
@@ -4,55 +4,235 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 字符串\n"
+    "# 字符串类型\n",
+    "\n",
+    "字符串是`序列类型`但非`可变类型`，（`可变类型`和`序列类型`的概念在 [数据类型]('./types.ipynb') 有讲）\n",
+    "\n",
+    "先回想一下 `序列类型` 的通用操作有哪些？\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 字符串创建\n"
+    "## 创建一个字符串\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 通过字面值形式创建\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'this a str'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 单双引号都可以\n",
+    "\n",
+    "\"this a str\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'str'>\n",
-      "10\n",
       "this\n",
       "is\n",
       "a\n",
-      "str\n",
-      "this is \n",
-      " a str\n",
-      "this is \\n a str\n"
+      "str\n"
      ]
     }
    ],
    "source": [
-    "a = \"this a str\"  # 单双引号都可以\n",
-    "\n",
-    "print(type(a))\n",
-    "print(len(a))\n",
-    "\n",
     "# 多行字符串，可以实现换行输出，注意：不建议用这种方式作为注释\n",
+    "\n",
     "print(\n",
     "    \"\"\"this\n",
     "is\n",
     "a\n",
     "str\"\"\"\n",
-    ")\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this is a \n",
+      " str\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 在字符串当中使用转义符\n",
     "\n",
-    "# 你可以在字符串当中使用转义符\n",
-    "print(\"this is \\n a str\")\n",
-    "# 也可以通过 r 得到一个原始值字符串\n",
-    "print(r\"this is \\n a str\")"
+    "print(\"this is a \\n str\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this is a str\n"
+     ]
+    }
+   ],
+   "source": [
+    "# \\ 在行尾时被用作续行符，可以将一行字符串写成多行\n",
+    "\n",
+    "print(\n",
+    "    \"this \\\n",
+    "is \\\n",
+    "a \\\n",
+    "str\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 原始字符串\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this is a \\n str\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 原始字符串的 \\ 不转义，直接显示\n",
+    "print(r\"this is a \\n str\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 字面量格式化字符串 f-string\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1+1 = 2\n",
+      "1+1 = 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# f-string 可以在字符串中插入表达式\n",
+    "\n",
+    "print(f\"1+1 = {1+1}\")\n",
+    "\n",
+    "# 甚至可以这样，f-string 能自动计算结果并补全\n",
+    "\n",
+    "print(f\"{1+1 = }\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 序列类型通用操作 - 字符串实现\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "s\n",
+      "t\n",
+      "r\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = \"this is a sequence type, but \"\n",
+    "b = \"str\"\n",
+    "\n",
+    "# 字符串连接、字符串重复\n",
+    "s = a + b * 2  # 字符串 b 重复两次之后和字符串 a 连接\n",
+    "\n",
+    "# 长\n",
+    "l = len(s)\n",
+    "\n",
+    "# 元素位置获取\n",
+    "i1 = s.find(\"sequence\")\n",
+    "i2 = s.index(\" type\")\n",
+    "\n",
+    "# 索引访问\n",
+    "s[i1]  # 正索引，从左向右索引从 0 开始\n",
+    "s[i1 - l]  # 负索引，从右向左索引从 -1 开始\n",
+    "\n",
+    "# 切片\n",
+    "s[i1:i2]\n",
+    "\n",
+    "# 成员运算\n",
+    "\n",
+    "b in s\n",
+    "b not in a\n",
+    "\n",
+    "# 最大/最小元素\n",
+    "min(s)\n",
+    "max(s)\n",
+    "\n",
+    "# 元素出现次数\n",
+    "s.count(\"str\", 0, len(s))\n",
+    "\n",
+    "# 循环迭代\n",
+    "\n",
+    "for char in b:\n",
+    "    print(char)"
    ]
   },
   {
@@ -60,72 +240,6 @@
    "metadata": {},
    "source": [
     "## 字符串运算\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "this is a: this a str\n",
-      "this is a: this a str\n",
-      "1+1=2\n",
-      "this is a: this a strthis is a: this a str\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 拼接\n",
-    "print(\"this is a: \" + a)\n",
-    "# 使用 f-string 进行拼接操作，毫无疑问，它是更好的选择\n",
-    "b = f\"this is a: {a}\"\n",
-    "print(b)\n",
-    "# f-string 甚至能自动计算结果并补全\n",
-    "print(f\"{1+1=}\")\n",
-    "\n",
-    "# 乘一个正整数，实现重复拼接\n",
-    "print(b * 2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 通过索引获取某一位置的值\n",
-    "print(a[5])  # 正索引，从左向右索引从 0 开始\n",
-    "print(a[-5])  # 负索引，从右向左索引从 -1 开始\n",
-    "\n",
-    "# 字符串截断，从左向右，左闭[右开)\n",
-    "print(b[0:7])\n",
-    "print(b[8:])\n",
-    "print(b[-5:-2])  # 负索引截断"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n",
-      "False\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 判断一个值是否属于一个字符串\n",
-    "\n",
-    "print(\"a\" in a)\n",
-    "print(\"a\" not in a)"
    ]
   },
   {
@@ -137,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -220,28 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# 数量统计，支持范围查找\n",
-    "a.count(\"is\", 0, len(a))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -334,40 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7\n",
-      "-1\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "7"
-      ]
-     },
-     "execution_count": 85,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# 字符串检索\n",
-    "\n",
-    "print(a.find(\"str\"))\n",
-    "print(a.find(\"none\"))\n",
-    "\n",
-    "a.index(\"str\")  # index 如果找不到检索内容会爆异常"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -420,29 +480,41 @@
    "source": [
     "# 判断是否不为空且仅包含数字和字母\n",
     "print(\"uuu74\".isalnum())\n",
+    "\n",
     "# 判断是否不为空且仅包含数字和中文\n",
     "print(\"uuu你好\".isalpha())\n",
+    "\n",
     "# 判断是否不为空且仅包含数字（也就是正整数字面值字符串）\n",
     "print(\"5557\".isdigit())\n",
+    "\n",
     "# 判断是否不为空且不包含大写字母\n",
     "print(\"2,2y\".islower())\n",
+    "\n",
     "# 判断是否不为空且不包含小写字母\n",
     "print(\"2,2Y\".isupper())\n",
+    "\n",
     "# 判断是否不为空且仅包含数字字符\n",
     "print(\"壹佰万½2²\".isnumeric())\n",
+    "\n",
     "# 判断是否不为空且仅包含空格\n",
     "print(\" \".isspace())\n",
+    "\n",
+    "# 是否仅包含十进制\n",
+    "\"11\".isdecimal()\n",
+    "\n",
     "# 字符串标题化\n",
     "print(a.title())\n",
+    "\n",
     "# 判断是不是标题化字符串\n",
     "print(a.title().istitle())\n",
+    "\n",
     "# 使用分隔符分隔\n",
     "print(\"-\".join(a))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -563,47 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'t'"
-      ]
-     },
-     "execution_count": 140,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "max(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 141,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "' '"
-      ]
-     },
-     "execution_count": 141,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "min(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -623,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -643,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -683,27 +715,6 @@
    "source": [
     "# 右对齐，0填充\n",
     "a.zfill(50)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 152,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 152,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# 是否仅包含十进制\n",
-    "\"11\".isdecimal()"
    ]
   }
  ],
