--- a/src/python3_course_for_devs/notebooks/types.ipynb
+++ b/src/python3_course_for_devs/notebooks/types.ipynb
@@ -8,12 +8,36 @@
     "\n",
     "标准数据类型：\n",
     "\n",
-    "- Number 数字类型\n",
-    "- String 字符串\n",
-    "- Tuple 元组\n",
-    "- List 列表\n",
-    "- Set 集合\n",
-    "- Dict 字典\n"
+    "- 数字类型\n",
+    "  - int 整型\n",
+    "  - float 浮点型\n",
+    "  - complex 复数类型\n",
+    "- str 字符串\n",
+    "- tuple 元组\n",
+    "- list 列表\n",
+    "- set 集合\n",
+    "- dict 字典\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 可通过 type 方法查看数据类型\n",
+    "type(\"nihao\")"
    ]
   },
   {
@@ -106,45 +130,9 @@
     "\n",
     "  - 包括：数字、集合、字典\n",
     "\n",
-    "#### 序列类型的通用操作：（这里只简单概括，会在类型分章节详细介绍）\n",
+    "#### 序列类型的通用操作：（操作的具体解释写在类型分章节）\n",
     "\n",
     "假如有两个序列：x，长度为 8，y，长度为 2\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- 索引访问：可使用索引来访问序列中的单个元素。索引从 0 开始，使用方括号 [] 来实现。\n",
-    "\n",
-    "  获取 x 第 3 个元素：`x[2]`\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- 切片操作：切片操作用于获取序列中的子序列，可以指定起始索引和结束索引（不包括结束索引本身）。使用方括号和冒号 [:] 来实现。\n",
-    "\n",
-    "  获取 x 从 2 到 6 的片段：`x[2,7]`\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- 长度获取：使用 `len` 函数获取序列的长度，即序列中元素的个数。\n",
-    "\n",
-    "  `len(x) == 8`\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- 成员运算：使用 `in` 和 `not in` 运算符来判断某个元素是否存在于序列中。\n",
-    "\n",
-    "  判断数字 9 是否在序列 x 中：`9 in x` 或 `9 not in x`\n"
    ]
   },
   {
@@ -162,7 +150,54 @@
    "source": [
     "- 重复：使用 \\* 运算符将序列重复指定次数，生成一个新的序列。\n",
     "\n",
-    "  `x * 2` 获得一个由两个 x 组成的新序列\n"
+    "  `x * 2` 获得一个由 x 重复两次获得的新序列\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 长度获取：使用 `len` 函数获取序列的长度，即序列中元素的个数。\n",
+    "\n",
+    "  `len(x) == 8`\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 索引访问：可使用索引来访问序列中的单个元素。\n",
+    "\n",
+    "  获取 x 第 3 个元素：`x[2]`\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 元素位置获取：使用 `find` 或 `index` 方法获取序列中指定元素首次出现的位置。\n",
+    "\n",
+    "  如果找不到对应元素 `find` 返回 -1，`index` 返回错误 `ValueError`\n",
+    "  x 中数字 4 的索引：`x.index(4)`\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 切片操作：切片操作用于获取序列中的子序列，可以指定起始索引和结束索引（不包括结束索引本身）。使用方括号和冒号 [:] 来实现。\n",
+    "\n",
+    "  获取 x 从 2 到 6 的片段：`x[2:7]`\n",
+    "  `[:]` 表示从开始到末尾\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 成员运算：使用 `in` 和 `not in` 运算符来判断某个元素是否存在于序列中。\n",
+    "\n",
+    "  判断数字 9 是否在序列 x 中：`9 in x` 或 `9 not in x`\n"
    ]
   },
   {
@@ -185,18 +220,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- 元素计数：使用 `count` 函数统计序列中指定元素的出现次数。\n",
+    "- 元素计数：使用 `count` 函数统计序列中指定元素的出现次数，可指定统计范围。\n",
     "\n",
     "  x 中数字 3 出现的次数：`x.count(3)`\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- 元素位置获取：使用 `index` 函数获取序列中指定元素首次出现的位置。\n",
-    "\n",
-    "  x 中数字 4 的索引：`x.index(4)`\n"
    ]
   }
  ],
