--- a/src/python3_course_for_devs/notebooks/number.ipynb
+++ b/src/python3_course_for_devs/notebooks/number.ipynb
@@ -135,7 +135,7 @@
    "source": [
     "#### 复数创建\n",
     "\n",
-    "构造函数 `complex` 方法接收两个参数，分别对应复数的实部和虚部，虚部如果不传则默认为 0\n"
+    "`complex` 方法接收两个参数，分别对应复数的实部和虚部，虚部如果不传则默认为 0\n"
    ]
   },
   {
@@ -182,26 +182,6 @@
    "metadata": {},
    "source": [
     "## 数字运算\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4.0"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "9 // 2.0"
    ]
   },
   {
@@ -376,7 +356,7 @@
     }
    ],
    "source": [
-    "# 等同于 2**3\n",
+    "# 幂运算：等同于 2**3\n",
     "pow(2, 3)"
    ]
   },
