--- a/src/python3_course_for_devs/notebooks/type_conversion.ipynb
+++ b/src/python3_course_for_devs/notebooks/type_conversion.ipynb
@@ -116,15 +116,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "转换为二进制: 0b101010\n",
+      "转换为八进制: 0o52\n",
+      "转换为十六进制: 0x2a\n"
+     ]
+    }
+   ],
+   "source": [
+    "decimal_number = 42\n",
+    "binary_number = bin(decimal_number)  # 十进制转换为二进制\n",
+    "print(\"转换为二进制:\", binary_number)  # 转换为二进制: 0b101010\n",
+    "\n",
+    "octal_number = oct(decimal_number)  # 十进制转换为八进制\n",
+    "print(\"转换为八进制:\", octal_number)  # 转换为八进制: 0o52\n",
+    "\n",
+    "hexadecimal_number = hex(decimal_number)  # 十进制转换为十六进制\n",
+    "print(\"转换为十六进制:\", hexadecimal_number)  # 转换为十六进制: 0x2a"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.6"
   },
   "orig_nbformat": 4
  },
