--- a/src/python3_course_for_devs/notebooks/list.ipynb
+++ b/src/python3_course_for_devs/notebooks/list.ipynb
@@ -6,86 +6,23 @@
    "source": [
     "# 列表\n",
     "\n",
-    "list 是 python 序列类型之一，可容纳不同类型的元素，这一点与数组不同。\n"
+    "列表即是`序列类型`也是`可变类型`，（`可变类型`和`序列类型`的概念在 [数据类型]('./types.ipynb') 有讲）\n",
+    "\n",
+    "回想一下 `序列类型` 的通用操作有哪些？\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['bar', 6, True, 3.4, None, {'a': 'b'}]\n"
-     ]
-    }
-   ],
    "source": [
-    "# 声明 list 字面量 foo\n",
-    "foo = [\"bar\", 6, True, 3.4, None, {\"a\": \"b\"}]\n",
-    "print(foo)"
+    "## 创建一个列表\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 47,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[3, 2]"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "# 由于 list 属于序列类型，所以可实现通用序列操作\n",
-    "\n",
-    "foo[1]\n",
-    "foo[-2]\n",
-    "foo[2:4]\n",
-    "foo[2:-1]\n",
-    "foo[-6:-1]\n",
-    "\n",
-    "3.4 in foo\n",
-    "3.4 not in foo\n",
-    "\n",
-    "[1, 2, \"dd\"] + [5, \"u\"]\n",
-    "[5, \"u\"] * 3\n",
-    "\n",
-    "len(foo)\n",
-    "\n",
-    "max([1, 2])\n",
-    "min([1, 2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# list 内置方法\n",
-    "\n",
-    "bar = [\"bar\", 6, True, 3.4, None, {\"a\": \"b\"}]\n",
-    "bar.append(\"add\")\n",
-    "bar.pop(0)\n",
-    "del bar[-1]\n",
-    "bar.extend((9, 4, 5))\n",
-    "bar.count({\"a\": \"b\"})\n",
-    "bar.index({\"a\": \"b\"})\n",
-    "bar.insert(1, \"pp\")\n",
-    "bar.remove(\"pp\")\n",
-    "bar.reverse()\n",
-    "[1, 2].sort()\n",
-    "bar.copy()\n",
-    "bar.clear()"
+    "### 通过字面值形式创建\n"
    ]
   },
   {
@@ -94,10 +31,289 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "['bar', 6, True, 3.4, None, {'a': 'b'}]"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 列表字面值\n",
+    "[\"bar\", 6, True, 3.4, None, {\"a\": \"b\"}]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 序列类型通用操作 - 列表实现\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['bar', 6, True, 3.4, None, {'a': 'b'}, 3.4, None, {'a': 'b'}]\n",
+      "9\n",
+      "4\n",
+      "None None\n",
+      "['bar', 6, True, 3.4]\n",
+      "False True\n",
+      "-1 2\n",
+      "2\n",
+      "3.4\n",
+      "None\n",
+      "{'a': 'b'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [\"bar\", 6, True]\n",
+    "b = [3.4, None, {\"a\": \"b\"}]\n",
+    "\n",
+    "# 连接、重复\n",
+    "s = a + b * 2  # 列表 b 重复两次之后和列表 a 连接\n",
+    "print(s)\n",
+    "\n",
+    "# 长\n",
+    "l = len(s)\n",
+    "print(l)\n",
+    "\n",
+    "# 元素位置获取\n",
+    "i = s.index(None)\n",
+    "print(i)\n",
+    "\n",
+    "# 索引访问\n",
+    "s[i]  # 正索引，从左向右索引从 0 开始\n",
+    "s[i - l]  # 负索引，从右向左索引从 -1 开始\n",
+    "print(s[i], s[i - l])\n",
+    "\n",
+    "# 切片\n",
+    "print(s[:i])\n",
+    "\n",
+    "# 成员运算\n",
+    "print(b in s, b not in a)\n",
+    "\n",
+    "# 最大/最小元素，需保证列表为数字列表\n",
+    "n = [1, -True, False, 2]\n",
+    "print(min(n), max(n))\n",
+    "\n",
+    "# 元素出现次数，与 str.count 不同，list.count 只接受一个参数\n",
+    "print(s.count(None))\n",
+    "\n",
+    "# 迭代\n",
+    "for item in b:\n",
+    "    print(item)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 列表内置方法/标准库操作\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 增\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['bar', 'insert', 6, True, 3.4, None, {'a': 'b'}, 3.4, None, {'a': 'b'}, 'append', 'extend1', 'extend2']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 在列表结尾增加一项\n",
+    "s.append(\"append\")\n",
+    "\n",
+    "# 在指定位置增加一项\n",
+    "s.insert(1, \"insert\")\n",
+    "\n",
+    "# 在结尾拼接另一个序列类型\n",
+    "s.extend((\"extend1\", \"extend2\"))\n",
+    "\n",
+    "print(s)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 删\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "insert\n",
+      "['bar', 6, True, 3.4, None, {'a': 'b'}, 3.4, None, {'a': 'b'}, 'append', 'extend1', 'extend2']\n",
+      "['bar', 6, True, 3.4, None, {'a': 'b'}, 3.4, None, {'a': 'b'}, 'append', 'extend1']\n",
+      "['bar', 6, True, 3.4, None, {'a': 'b'}, 3.4, None, {'a': 'b'}, 'extend1']\n",
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 删除之前先备份\n",
+    "_s = s.copy()\n",
+    "\n",
+    "# 在指定位置弹出一项，默认为最后一项\n",
+    "print(_s.pop(1))\n",
+    "\n",
+    "print(_s)\n",
+    "\n",
+    "# 还可以通过 del 语句删除\n",
+    "del _s[-1]\n",
+    "\n",
+    "print(_s)\n",
+    "\n",
+    "# 移除列表中某项的第一个匹配\n",
+    "_s.remove(\"append\")\n",
+    "\n",
+    "print(_s)\n",
+    "\n",
+    "# 清空列表\n",
+    "_s.clear()\n",
+    "\n",
+    "print(_s)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 改\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['new bar', 'insert', 6, True, 3.4, None, {'a': 'b'}, 3.4, None, {'a': 'b'}, 'append', 'extend1', 'extend2']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 根据索引替换元素\n",
+    "s[0] = f\"new {s[0]}\"\n",
+    "print(s)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 查\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'new bar'"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 直接根据索引获取\n",
+    "\n",
+    "s[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 排序\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['new bar', 'insert', 6, True, 3.4, None, {'a': 'b'}, 3.4, None, {'a': 'b'}, 'append', 'extend1', 'extend2']\n",
+      "[-1, False, 1, 2]\n",
+      "[-1, False, 1, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 反向排序\n",
+    "s.reverse()\n",
+    "print(s)\n",
+    "\n",
+    "# 不改变原数组，返回排序完新数组\n",
+    "print(sorted(n))\n",
+    "\n",
+    "n1 = n + [3]\n",
+    "# 对原列表进行排序\n",
+    "n1.sort()\n",
+    "print(n1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 判断相等\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "True\n",
+      "True\n",
+      "False\n",
       "False\n"
      ]
     }
@@ -107,9 +323,14 @@
     "\n",
     "b = [2, 3]\n",
     "c = [2, 3]\n",
-    "print(operator.eq(c, b))\n",
     "\n",
-    "print(b is c)"
+    "# 值是否相等\n",
+    "print(operator.eq(b, c))\n",
+    "print(b == c)\n",
+    "\n",
+    "# 内存地址是否相同\n",
+    "print(b is c)\n",
+    "print(id(b) == id(c))"
    ]
   }
  ],
