--- a/src/python3_course_for_devs/notebooks/string.ipynb
+++ b/src/python3_course_for_devs/notebooks/string.ipynb
@@ -183,13 +183,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "this is a sequence type, but str str\n",
+      "36\n",
+      "10 18\n",
+      "s s\n",
+      "sequence\n",
+      "True True\n",
+      "  y\n",
+      "2\n",
+      " \n",
       "s\n",
       "t\n",
       "r\n"
@@ -197,40 +206,41 @@
     }
    ],
    "source": [
-    "a = \"this is a sequence type, but \"\n",
-    "b = \"str\"\n",
+    "a = \"this is a sequence type, but\"\n",
+    "b = \" str\"\n",
     "\n",
-    "# 字符串连接、字符串重复\n",
+    "# 连接、重复\n",
     "s = a + b * 2  # 字符串 b 重复两次之后和字符串 a 连接\n",
+    "print(s)\n",
     "\n",
     "# 长\n",
     "l = len(s)\n",
+    "print(l)\n",
     "\n",
     "# 元素位置获取\n",
-    "i1 = s.find(\"sequence\")\n",
-    "i2 = s.index(\" type\")\n",
+    "i1 = s.index(\"sequence\")\n",
+    "# 字符串还可以通过 find 方法获取元素位置，区别是找不到元素时返回 -1，而不是报错\n",
+    "i2 = s.find(\" type\")\n",
+    "print(i1, i2)\n",
     "\n",
     "# 索引访问\n",
     "s[i1]  # 正索引，从左向右索引从 0 开始\n",
     "s[i1 - l]  # 负索引，从右向左索引从 -1 开始\n",
+    "print(s[i1], s[i1 - l])\n",
     "\n",
     "# 切片\n",
-    "s[i1:i2]\n",
+    "print(s[i1:i2])\n",
     "\n",
     "# 成员运算\n",
+    "print(b in s, b not in a)\n",
     "\n",
-    "b in s\n",
-    "b not in a\n",
+    "# 最大/最小元素，对比的是元素字典顺序\n",
+    "print(min(s), max(s))\n",
     "\n",
-    "# 最大/最小元素\n",
-    "min(s)\n",
-    "max(s)\n",
+    "# 元素出现次数，支持指定查找范围\n",
+    "print(s.count(\"str\", 0, len(s)))\n",
     "\n",
-    "# 元素出现次数\n",
-    "s.count(\"str\", 0, len(s))\n",
-    "\n",
-    "# 循环迭代\n",
-    "\n",
+    "# 迭代\n",
     "for char in b:\n",
     "    print(char)"
    ]
@@ -239,14 +249,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 字符串运算\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 内置方法\n"
+    "## 字符串内置方法/标准库操作\n"
    ]
   },
   {
