--- a/src/python3_course_for_devs/notebooks/tuple.ipynb
+++ b/src/python3_course_for_devs/notebooks/tuple.ipynb
@@ -6,8 +6,25 @@
    "source": [
     "# 元组\n",
     "\n",
-    "元组也是序列类型，但与列表不同，元组元素无法被更改，因此，经过优化的元组比列表内存占用更少，迭代效率更高。\n",
-    "并且，由于元组的不可变性，其可作为字典的键来使用\n"
+    "元组是`序列类型`但非`可变类型`，（`可变类型`和`序列类型`的概念在 [数据类型]('./types.ipynb') 有讲）\n",
+    "\n",
+    "回想一下 `序列类型` 的通用操作有哪些？\n",
+    "\n",
+    "元组与列表不同，元素无法被更改，因此，经过优化的元组比列表内存占用更少，迭代效率更高。\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 创建一个元组\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 通过字面值形式创建\n"
    ]
   },
   {
@@ -16,38 +33,85 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 元组字面量声明\n",
+    "# 空元组\n",
+    "t0 = ()\n",
     "\n",
-    "t0 = ()  # 空元组\n",
-    "\n",
-    "t1 = (\"foo\",)  # 元组只包含一个元素\n",
+    "# 包含一个元素的元组\n",
+    "t1 = (\"foo\",)\n",
     "\n",
     "t2 = (\"foo\", 5)\n",
     "\n",
-    "t3 = \"foo\", 5  # 仅使用逗号也可以声明元组"
+    "# 仅使用逗号也可以\n",
+    "t3 = \"foo\", 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 序列类型通用操作 - 元组实现\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{('foo',): ('foo',)}"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('bar', 6, True, 3.4, None, {'a': 'b'}, 3.4, None, {'a': 'b'})\n",
+      "9\n",
+      "4\n",
+      "None None\n",
+      "('bar', 6, True, 3.4)\n",
+      "False True\n",
+      "-1 2\n",
+      "2\n",
+      "3.4\n",
+      "None\n",
+      "{'a': 'b'}\n"
+     ]
     }
    ],
    "source": [
-    "# 元组可作为字典的键，列表则不行\n",
+    "a = (\"bar\", 6, True)\n",
+    "b = (3.4, None, {\"a\": \"b\"})\n",
     "\n",
-    "d1 = {t1: t1}\n",
-    "d1"
+    "# 连接、重复\n",
+    "s = a + b * 2  # 列表 b 重复两次之后和列表 a 连接\n",
+    "print(s)\n",
+    "\n",
+    "# 长\n",
+    "l = len(s)\n",
+    "print(l)\n",
+    "\n",
+    "# 元素位置获取\n",
+    "i = s.index(None)\n",
+    "print(i)\n",
+    "\n",
+    "# 索引访问\n",
+    "s[i]  # 正索引，从左向右索引从 0 开始\n",
+    "s[i - l]  # 负索引，从右向左索引从 -1 开始\n",
+    "print(s[i], s[i - l])\n",
+    "\n",
+    "# 切片\n",
+    "print(s[:i])\n",
+    "\n",
+    "# 成员运算\n",
+    "print(b in s, b not in a)\n",
+    "\n",
+    "# 最大/最小元素，需保证列表为数字列表\n",
+    "n = (1, -True, False, 2)\n",
+    "print(min(n), max(n))\n",
+    "\n",
+    "# 元素出现次数，与 str.count 不同，list.count 只接受一个参数\n",
+    "print(s.count(None))\n",
+    "\n",
+    "# 迭代\n",
+    "for item in b:\n",
+    "    print(item)"
    ]
   }
  ],
