--- a/src/python3_course_for_devs/notebooks/dict.ipynb
+++ b/src/python3_course_for_devs/notebooks/dict.ipynb
@@ -6,12 +6,19 @@
    "source": [
     "# 字典\n",
     "\n",
-    "可变类型\n"
+    "字典是`可变类型`但非`序列类型`，（`可变类型`和`序列类型`的概念在 [数据类型]('./types.ipynb') 有讲）\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 字典字面量操作\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -20,20 +27,18 @@
        "{'foo': 5, ('bar', 8): 'tt', 'new': 'new'}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 字典的字面量声明\n",
-    "\n",
-    "# 字典的键必须是不可变值，包括字符串、数字、元组\n",
+    "# 字典的键必须是不可变的，所以字符串、数字、元组都可以作为字典的 key\n",
     "d1 = {\"foo\": 5, 2: 28, (\"bar\", 8): \"t\"}\n",
     "\n",
-    "d1[\"foo\"]  # 读\n",
+    "d1[\"foo\"]  # 读字典的一个属性值\n",
     "\n",
-    "d1[(\"bar\", 8)] = \"tt\"  # 更新\n",
+    "d1[(\"bar\", 8)] = \"tt\"  # 值更新\n",
     "\n",
     "d1[\"new\"] = \"new\"  # 新增\n",
     "\n",
@@ -44,54 +49,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(d1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{False: 1, 1: 2}"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': 2}\n",
+      "{True: 2}\n"
+     ]
     }
    ],
    "source": [
     "# 字典的键如果重复，那么后面的值会覆盖前面的\n",
     "\n",
-    "b3 = {\"a\": 1, \"a\": 2}\n",
+    "d2 = {\"a\": 1, \"a\": 2}\n",
+    "print(d2)\n",
     "\n",
     "# 注意 布尔型和数字类型的关系\n",
-    "b3 = {True: 1, 1: 2}\n",
-    "b3 = {False: 1, 0: 2}\n",
-    "b3"
+    "d3 = {True: 1, 1: 2}\n",
+    "print(d3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 字典内置方法/标准库操作\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -100,59 +90,117 @@
        "{}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 清空\n",
-    "d1.clear()"
+    "d3.clear()\n",
+    "d3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 浅拷贝\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "False\n",
-      "3 33 False\n",
-      "{'b2': 33} {'b2': 33} True\n"
+      "{'x1': {'x2': {'x3': 4}}, 'y1': 1} False\n",
+      "1 11 False\n",
+      "{'x2': 22} {'x2': 22} True\n"
      ]
     }
    ],
    "source": [
-    "# 浅拷贝：只深拷贝一级元素，子对象是引用\n",
-    "d2 = {\"a1\": 3, \"b1\": {\"b2\": {\"b3\": 9}}}\n",
-    "d2c = d2.copy()\n",
+    "# 浅拷贝：只深拷贝一级元素，子对象依然是原始字典对应引用\n",
     "\n",
-    "print(id(d2) == id(d2c))  # d2 和 d2c 内存地址不同\n",
+    "d4 = {\"x1\": {\"x2\": {\"x3\": 4}}, \"y1\": 1}\n",
     "\n",
-    "d2c[\"a1\"] = 33  # 修改一级元素的值\n",
+    "d4c_deep = d4.copy()\n",
     "\n",
-    "print(d2[\"a1\"], d2c[\"a1\"], id(d2[\"a1\"]) == id(d2c[\"a1\"]))\n",
+    "print(d4c_deep, id(d4) == id(d4c_deep))  # d4 和 d4c_deep 内存地址不同\n",
     "\n",
-    "d2c[\"b1\"][\"b2\"] = 33  # 修改二级元素的值\n",
+    "# 修改一级元素的值\n",
+    "d4c_deep[\"y1\"] = 11\n",
     "\n",
-    "print(d2[\"b1\"], d2c[\"b1\"], id(d2[\"b1\"]) == id(d2c[\"b1\"]))"
+    "# 一级元素值不等，内存地址也不同\n",
+    "print(d4[\"y1\"], d4c_deep[\"y1\"], d4[\"y1\"] is d4c_deep[\"y1\"])\n",
+    "\n",
+    "# 修改二级元素的值\n",
+    "d4c_deep[\"x1\"][\"x2\"] = 22\n",
+    "\n",
+    "# 二级元素值不等，内存地址也不同，证明二级元素是值拷贝\n",
+    "print(d4[\"x1\"], d4c_deep[\"x1\"], d4[\"x1\"] is d4c_deep[\"x1\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 深拷贝\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'x1': {'x2': {'x3': 4}}, 'y1': 1} False\n",
+      "1 11 False\n",
+      "{'x2': {'x3': 4}} {'x2': 22} False\n"
+     ]
+    }
+   ],
+   "source": [
+    "from copy import deepcopy\n",
+    "\n",
+    "d5 = {\"x1\": {\"x2\": {\"x3\": 4}}, \"y1\": 1}\n",
+    "\n",
+    "d5c_deep = deepcopy(d5)\n",
+    "\n",
+    "print(d5c_deep, id(d5) == id(d5c_deep))  # d5 和 d5c_deep 内存地址不同\n",
+    "\n",
+    "# 修改一级元素的值\n",
+    "d5c_deep[\"y1\"] = 11\n",
+    "\n",
+    "# 一级元素值不等，内存地址也不同\n",
+    "print(d5[\"y1\"], d5c_deep[\"y1\"], d5[\"y1\"] is d5c_deep[\"y1\"])\n",
+    "\n",
+    "# 修改二级元素的值\n",
+    "d5c_deep[\"x1\"][\"x2\"] = 22\n",
+    "\n",
+    "# 二级元素值不等，内存地址也不同，证明二级元素是值拷贝\n",
+    "print(d5[\"x1\"], d5c_deep[\"x1\"], d5[\"x1\"] is d5c_deep[\"x1\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"{'foo': 5, ('bar', 8): 'tt', 'new': 'new'}\""
+       "\"{('bar', 8): 'tt', 'new': 'new'}\""
       ]
      },
-     "execution_count": 15,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,16 +211,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'s': None, ('t', 3): None, False: None}"
+       "{1: None, 's': None, ('t', 3): None}"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,20 +231,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 值获取\n",
     "d2.get(\"a1\")"
@@ -204,16 +241,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('a1', 3), ('b1', {'b2': 33})]"
+       "[('a', 2)]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,16 +262,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['a1', 'b1']"
+       "['a']"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,16 +283,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[3, {'b2': 33}]"
+       "[2]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,16 +304,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'foo': 5, ('bar', 8): 'tt', 'new': 'new', 'a1': 3, 'b1': {'b2': 33}}"
+       "{'foo': 5, ('bar', 8): 'tt', 'new': 'new', 'a': 2}"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +334,7 @@
        "5"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,16 +345,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('b1', {'b2': 33})"
+       "('a', 2)"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
